[template] removed no longer needed spacing code

--- a/dev/css/main.scss
+++ b/dev/css/main.scss
@@ -91,14 +91,9 @@ mark {
 
 .parallax__layer--base {
 	position: relative;
-	margin-top: 70vw;
 }
 
 .parallax__layer--back {
-	position: absolute;
-	top: 0;
-	right: 0;
-	left: 0;
 	z-index: -1;
 }
 
@@ -119,72 +114,34 @@ mark {
 
 /* LARGER PHONES */
 @media screen and (min-width: 481px) {
-    .parallax__layer--base {
-		margin-top: 80vw;
-	}
 }
 
 /* TABLET LANDSCAPE & SMALL LAPTOPS */
 @media screen and (min-width: 769px) {
-	.parallax__layer--base {
-		margin-top: 60vw;
-	}
-
-	.section__main {
-		padding-left: 4vw;
-		padding-right: 4vw;
-	}
 }
 
 /* LAPTOPS */
 @media screen and (min-width: 1025px) {
-	.section__main {
-		padding-left: 6vw;
-		padding-right: 6vw;
-	}
 }
 
 /* MEDIUM LAPTOPS */
 @media screen and (min-width: 1281px) {
-	.section__main {
-		padding-left: 8vw;
-		padding-right: 8vw;
-	}
 }
 
 /* MEDIUM DESKTOPS */
 @media screen and (min-width: 1441px) {
-	.parallax__layer--base {
-		margin-top: 50vw;
-	}
-
-	.section__main {
-		padding-left: 10vw;
-		padding-right: 10vw;
-	}
 }
 
 /* LARGER MEDIUM DESKTOPS */
 @media screen and (min-width: 1536px) {
-	.section__main {
-		padding-left: 12vw;
-		padding-right: 12vw;
-	}
 }	
 
 /* LARGER DESKTOPS */
 @media screen and (min-width: 1921px) {
-	.parallax__layer--base {
-		margin-top: 45vw;
-	}
 }
 
 /* VERY LARGE DESKTOPS */
 @media screen and (min-width: 2161px) {
-	.section__main {
-		padding-left: 15vw;
-		padding-right: 15vw;
-	}
 }
 
 ul,
